--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,34 @@
 html {
   box-sizing: border-box;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 1.5em;
+  padding: 0 0 0 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 2em 0;
+}
+
+h1 {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+a {
+  border: 2px solid #333;
+  border-radius: 3px;
 }
