--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-family: "Lato", sans-serif;
   line-height: 1.5;
 }
 
@@ -8,27 +9,33 @@ html {
 }
 
 body {
-  margin: 1.5em;
-  padding: 0 0 0 0;
+  margin: 0;
+  padding: 0;
+}
+
+section{
+  margin:  0 auto;
+  padding: 2em 1em;
 }
 
 img {
-  display: block;
   width: 100%;
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 2em 0;
+  max-width:  25em;
+}
+
+div {
+  width: 100%;
+  max-width:  25em;
 }
 
 h1 {
+}
+
+p {
   display: block;
-  width: 100%;
-  max-width: 400px;
-  margin: 0 auto;
-  text-align: left;
 }
 
 a {
-  border: 2px solid #333;
-  border-radius: 3px;
+  display: block;
+  padding: 0.4em 0.5em 0.75em;
 }
