--- a/css/main.css
+++ b/css/main.css
@@ -49,12 +49,22 @@ p {
 }
 
 button {
+  display: inline-block;
+  border: 3px solid #333;
+  border-radius: 6px;
   text-align: center;
+  text-decoration: none;
+  background-color: #fff;
+}
+
+button:hover {
+  background-color: #666;
 }
 
 a {
   display: inline-block;
-  padding: 0.4em 0.75em 0.5em 0.75em;
-  border: 3px solid #333;
-  border-radius: 6px;
+  color: #000;
+  text-decoration: none;
+  font-size: 1.5em;
+  padding: 0.4em 0.5em 0.75em 0.5em;
 }
