--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  vertical-align: middle;
 }
 
 section {
@@ -21,7 +22,7 @@ section {
   padding: 2em 0;
 }
 
-span {
+div {
   display: inline-block;
 }
 
@@ -30,16 +31,16 @@ div {
   padding: 0 1em 0;
   vertical-align: top;
   text-align: left;
+  max-width: 25em;
 }
 
 img {
-  display: inline-block;
+  display: block;
   width: 100%;
-  max-width: 25em;
   margin: 0 0 1.5em 0;
 }
 
-h1 {
+h2 {
   margin: 0 0;
 }
 
@@ -48,23 +49,20 @@ p {
   margin: 1.5em 0;
 }
 
-button {
-  display: inline-block;
-  border: 3px solid #333;
-  border-radius: 6px;
-  text-align: center;
-  text-decoration: none;
-  background-color: #fff;
-}
-
-button:hover {
-  background-color: #666;
-}
-
-a {
+.btn {
   display: inline-block;
   color: #000;
   text-decoration: none;
-  font-size: 1.5em;
   padding: 0.4em 0.5em 0.75em 0.5em;
+  border: 3px solid #333;
+  border-radius: 6px;
+  background-color: #fff;
+}
+
+a:hover {
+  display: inline-block;
+  color: #f2f2f2;
+  text-decoration: none;
+  padding: 0.4em 0.5em 0.75em 0.5em;
+  background-color: #666;
 }
